--- a/app/templates/tab2.html
+++ b/app/templates/tab2.html
@@ -27,7 +27,7 @@
             <tbody id="category-rows">
                 {% if contracts %}
                     {% for contract in contracts %}
-                        <tr>
+                        <tr class="{% if contract.is_stale %}stale-contract{% endif %}">
                             <td>{{ contract.contract_number }}</td>
                             <td>{{ contract.client_name }}</td>
                             <td>{{ contract.items_on_contract }}</td>
@@ -37,6 +37,18 @@
                                 <button class="btn btn-sm btn-secondary expand-btn" data-target-id="common-{{ contract.contract_number|replace(' ', '_') }}" data-contract-number="{{ contract.contract_number }}">Expand</button>
                                 <button class="btn btn-sm btn-secondary collapse-btn" data-collapse-target="common-{{ contract.contract_number|replace(' ', '_') }}" style="display:none;">Collapse</button>
                                 <button class="btn btn-sm btn-info print-btn" data-print-level="Contract" data-print-id="common-{{ contract.contract_number|replace(' ', '_') }}" data-category="{{ contract.contract_number }}">Print</button>
+                                {% if contract.is_stale %}
+                                    <select id="bulk-status-{{ contract.contract_number|replace(' ', '_') }}" class="form-control form-control-sm d-inline-block w-auto">
+                                        <option value="">Status</option>
+                                        <option value="Ready to Rent">Ready to Rent</option>
+                                        <option value="Sold">Sold</option>
+                                        <option value="Repair">Repair</option>
+                                        <option value="Needs to be Inspected">Needs to be Inspected</option>
+                                        <option value="Wash">Wash</option>
+                                        <option value="Wet">Wet</option>
+                                    </select>
+                                    <button class="btn btn-sm btn-warning" onclick="window.updateContractStatus('{{ contract.contract_number }}', '{{ contract.contract_number|replace(' ', '_') }}')">Update All</button>
+                                {% endif %}
                                 <div id="loading-common-{{ contract.contract_number|replace(' ', '_') }}" style="display:none;" class="loading-indicator">Loading...</div>
                             </td>
                         </tr>
