Add 'Other' option for hand-counted items

--- a/app/templates/tab4.html
+++ b/app/templates/tab4.html
@@ -70,11 +70,10 @@
                 </div>
                 <div class="form-group">
                     <label for="hand-counted-item-name">Select Item:</label>
-                    <select id="hand-counted-item-name" class="form-control">
+                    <select id="hand-counted-item-name" class="form-control" onchange="handleItemSelection()">
                         <option value="">Select Item...</option>
                     </select>
-                    <input type="text" id="new-item-name" class="form-control mt-2" placeholder="Enter New Item" style="display:none;">
-                    <button type="button" class="btn btn-sm btn-secondary mt-2" onclick="toggleNewItemInput()">Toggle New Item</button>
+                    <input type="text" id="new-item-name" class="form-control mt-2" placeholder="Enter Item Name" style="display:none;">
                 </div>
                 <div class="form-group">
                     <label for="hand-counted-quantity">Quantity:</label>
