--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -34,6 +34,7 @@
                 <th>Rental Class ID</th>
                 <th class="sortable" data-column="common_name">Common Name<span class="sort-arrow"></span></th>
                 <th>Short Common Name</th>
+                <th>Hand Counted</th>
                 <th>Actions</th>
             </tr>
         </thead>
